create 29 files, update 21 files and copy 2 files

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+logging.level.root=ERROR
+logging.file.name=D:/School/YCPM/Manage/backend/logs/app.log
 
 jwt.header=Authorization
 jwt.secret=baoduy123
-jwt.expiration=604800
+jwt.expiration=6048000
