--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.flywaydb.flyway' version '11.10.0'
 }
 
 group = 'com.example'
@@ -56,4 +57,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/manageUniversitySystem'
+    user = 'postgres'
+    password = '123'
+    locations = ['classpath:db/migration']
+    driver = 'org.postgresql.Driver'
 }
