--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/manageUniversitySystem
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
@@ -12,4 +12,6 @@ logging.file.name=D:/School/YCPM/Manage/backend/logs/app.log
 
 jwt.header=Authorization
 jwt.secret=baoduy123
-jwt.expiration=6048000
+jwt.expiration=900000000
+jwt.access.expiration=900000000
+jwt.refresh.expiration=604800000
